--- a/vproapp-service.yml
+++ b/vproapp-service.yml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name : vproapp-service
-spec :
-  ports: 80
-  targetPort: vproapp-port
-  protocol: TCP
-selector :
-  app: vproapp
-type: LoadBalancer
+  name: vproapp-service
+spec:
+  ports:
+  - port: 80
+    targetPort: vproapp-port
+    protocol: TCP
+  selector:
+    app: vproapp
+  type: LoadBalancer
